atributos en las etiquetas

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <!--Estas son etiquetas-->
     <h1>Encabezado</h1>
     <h2>Encabezado 2</h2>
+<br> <!--esto es un salto de linea-->
     <p>esto es un parrafo</p>
-      
+      <!--esto es una etiqueta con tributo-->
+<a href="https://www.google.com.mx/" target="_blank">esto es un link</a>
+<br>
+<a href="tabla.html">tabla</a>
 
-
-    
 </body>
 </html>
