--- a/Videos.html
+++ b/Videos.html
@@ -3,19 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>videos</title>
+    <title>video</title>
 </head>
 <body>
-    <!--etiquetas con colores-->
-    <h1 style="background-color: chocolate;">Encabezado</h1>
-    <h2 style="background-color: crimson; color: salmon;">Encabezado 2</h2>
-    
-    <h2 style="background-color: rgb(209, 29 ,29);">Color con RGB</h2>
-<!--Color con transparencia-->
-    <div style="color: salmon;">
-        <br>
-        <h2 style="background-color: rgb(209, 29 ,29)">Transparencia</h2>
-        <br>
-    </div>
+    <video src="multimedia/Luis_1.mp4" controls></video>
 </body>
 </html>
