--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
 <br> <!--esto es un salto de linea-->
     <p>esto es un parrafo</p>
       <!--esto es una etiqueta con tributo-->
-<a href="https://www.google.com.mx/" target="_blank">esto es un link</a>
+<a href="https://www.google.com.mx/" target="_blank">google</a>
+
+
 <br>
 <a href="tabla.html">tabla</a>
+<br>
+<a href="Colores.html">Colores</a>
+<br>
+<a href="Videos.html">Videos</a>
+<br>
+<a href="Imagenes.html">Imagenes</a>
+<br>
+<a href="audio.html">audio</a>
+<br>
+<a href="Formulario.html">Formulario</a>
+<br>
+<a href="guardados.html">guardados</a>
 
 </body>
 </html>
