--- a/Colores.html
+++ b/Colores.html
@@ -15,7 +15,14 @@
     <div style="color: salmon;">
         <br>
         <h2 style="background-color: rgb(209, 29 ,29)">Transparencia</h2>
+        <div style="background-color: blueviolet;">
+            <br>
+            <h1 style="background-color: rgb(0, 0, 255, 0.5);;">Transparencia</h1>
+            <br> 
         <br>
+
     </div>
+    
+    
 </body>
 </html>
